--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~9.3.0",
     "@types/selenium-webdriver": "^3.0.8",
+    "child_process": "^1.0.2",
     "codelyzer": "~4.0.2",
     "electron": "^1.8.1",
     "jasmine-core": "~2.8.0",
